# python_08

./: README.md  requirements.txt
ex0/: construct.py
ex1/: loading.py  pyproject.toml
ex2/: .env.example  oracle.py
